Fixed overflow X issues caused by animations

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,8 @@ html {
 *::before {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow-x: hidden; }
 
 main {
   display: block; }
