--- a/scss/core/_reset.scss
+++ b/scss/core/_reset.scss
@@ -8,6 +8,7 @@ html {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 main {
